news animation ie7 fix

--- a/web/themes/novatel/less/ie.less
+++ b/web/themes/novatel/less/ie.less
@@ -52,5 +52,11 @@ html {
 		body.wrap {
 			z-index: 0;
 		}
+
+		body {
+			.homeSocial {
+				overflow: hidden;
+			}
+		}
 	}
 }
